# UABEA

./: .gitignore  .gitmodules  README.md  fetch_repos.sh  main.py  mypy.ini  pyproject.toml
UABEA/UABEAvalonia/: Program.cs
UABEAvalonia/: CommandLineHandler.cs  Program.cs
UABEAvalonia/Logic/: AssetImportExport.cs
db_dofus_unity/: __init__.py  connection_mappings.json  consts.py  game_mappings.json  get_datas.py  maj.py  utils.py
db_dofus_unity/generator/: gen_struct.py  generate_mapping_obfuscate_protos.py  generate_python_from_datas.py  generate_python_from_proto.py  i18n.py  struct.py
db_dofus_unity/generator/comparator/: proto_comparator.py  utils.py
db_dofus_unity/generator/template/: msgspec.jinja2
db_dofus_unity/protos/connection/: login_message_pb2.py
db_dofus_unity/protos/game/: account_pb2.py  achievement_pb2.py  achievement_pb2.pyi  admin_console_pb2.py  alliance_conquest_pb2.py  alliance_information_pb2.py  alliance_member_pb2.py  alliance_rank_pb2.py  alliance_recruitment_pb2.py  alteration_pb2.py  alteration_pb2.pyi  anomaly_pb2.py  appearance_pb2.py  appearance_pb2.pyi  area_pb2.py  arena_pb2.py  arena_pb2.pyi  atlas_pb2.py  bak_pb2.py  basic_pb2.py  bid_activity_pb2.py  bid_activity_pb2.pyi  breach_pb2.py  challenge_pb2.py  character_management.proto  character_management_pb2.py  character_management_pb2.pyi  character_pb2.py  chat_pb2.py  choice_pb2.py  choice_pb2.pyi  client_verification_pb2.py  common.proto  common_pb2.py  common_pb2.pyi  connection_pb2.py  contact_pb2.py  (+81 more)
outputs/: connection_mappings.json  game_mappings.json
src/: __main__.py  consts.py  debug.py  get_datas.py  get_protos.py  maj.py  on_init.py  on_maj.py  utils.py
src/generator/: data_cleaning.py  gen_mapping_proto.py  gen_struct.py  generate_mapping_obfuscate_protos.py  generate_proto_from_descriptor.py  generate_python_from_datas.py  generate_python_from_datas_and_clean.py  generate_python_from_proto.py  i18n.py
(+400 files in other folders)
