[tool.poetry]
name = "db-dofusunity"
version = "0.1.0"
description = ""
authors = ["Valentin Alix <valentin-alix.850@outlook.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.11,<4.0"
pydantic = ">2.9"
datamodel-code-generator = "^0.26.1"
proto-schema-parser = "^1.3.10"
icecream = ">2"
protobuf = ">5.28"


[tool.poetry.group.dev.dependencies]
mypy = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
