[tool.poetry]
name = "db_dofus_unity"
version = "0.1.0"
description = ""
authors = ["Valentin Alix <valentin-alix.850@outlook.fr>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = ">3.11,<4.0"
msgspec = "^0.18.6"
protobuf = "5.28.3"
cachetools = "^5.5.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.12.1"
icecream = ">2"
tqdm = "^4.66.5"
types-tqdm = "^4.66.0.20240417"
pydantic = ">2.9"
datamodel-code-generator = "^0.26.1"
proto-schema-parser = "^1.3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
